--- a/packages/renderer/index.html
+++ b/packages/renderer/index.html
@@ -4,7 +4,13 @@
   <meta charset="UTF-8">
   <meta content="script-src 'self' blob:" http-equiv="Content-Security-Policy">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>React App</title>
+  <title>LeStudio Game List</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="google" content="notranslate" />
+  <meta name="google" content="nositelinkssearchbox" />
+
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" />
 </head>
 <body>
 <div id="app"></div>
