feat(app): add background

--- a/packages/renderer/index.html
+++ b/packages/renderer/index.html
@@ -13,7 +13,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" />
 </head>
 <body>
-<div id="app"></div>
+<div id="app" class="bg-[#18181b] h-screen w-screen text-white"></div>
 <script src="./src/index.tsx" type="module"></script>
 </body>
 </html>
