fix(windi): fix line-clamp

--- a/packages/renderer/index.html
+++ b/packages/renderer/index.html
@@ -15,5 +15,13 @@
 <body>
 <div id="app" class="bg-[#18181b] h-screen w-screen text-white"></div>
 <script src="./src/index.tsx" type="module"></script>
+<style>
+  .line-clamp-1 {
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 1;
+  }
+</style>
 </body>
 </html>
